--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body{
 .content h1 {
   color: rgb(216, 119, 255);
   letter-spacing: 5px;
+  padding-top: 20px;
 }
 .content p {
   margin-top: 100px;
@@ -65,7 +66,6 @@ body{
   box-shadow: 10px 20px 30px black;
 }
 .buttons {
-  margin-top: -100px;
   margin-left: 30px;
   width: 250px;
   display: flex;
