--- a/style.css
+++ b/style.css
@@ -267,16 +267,19 @@ form button:hover{
   .content p, .content button{
     display: none;
   }
+  .content h1 {
+    padding: 10px 0;
+  }
   .container {
     box-shadow: none;
     background: transparent;
     width: 80vw;
     transform: scale(1.1);
-    margin-bottom: 100px;
+    margin-bottom: 120px;
     padding-top: 20px;
   }
   .buttons {
-  padding-top: 30px;
+  padding-top: 10px;
   }
   body {
     flex-direction: column;
