--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ body{
 .content h1 {
   color: rgb(216, 119, 255);
   letter-spacing: 5px;
-  padding-top: 20px;
 }
 .content p {
   margin-top: 100px;
@@ -66,6 +65,7 @@ body{
   box-shadow: 10px 20px 30px black;
 }
 .buttons {
+  margin-top: -50px;
   margin-left: 30px;
   width: 250px;
   display: flex;
@@ -267,23 +267,19 @@ form button:hover{
   .content p, .content button{
     display: none;
   }
-  .content h1 {
-    padding: 10px 0;
-  }
   .container {
     box-shadow: none;
     background: transparent;
     width: 80vw;
+    margin-bottom: 100px;
     transform: scale(1.1);
-    margin-bottom: 120px;
-    padding-top: 20px;
-  }
-  .buttons {
-  padding-top: 10px;
   }
   body {
     flex-direction: column;
     justify-content: center;
+  }
+  form {
+    margin-left: 0;
   }
 }
 
